# otus5

./: CMakeLists.txt  README.md  main.cpp  matrix.h  test_matrix.cpp
.github/workflows/: release.yml
